[gd_scene load_steps=50 format=3 uid="uid://b3n3nh4j32s1e"]

[ext_resource type="Script" path="res://Scripts/mushroom_enemy.gd" id="1_fswyn"]
[ext_resource type="Texture2D" uid="uid://blaqipqa46boe" path="res://Pixel Adventure 2/Mushroom/Hit.png" id="1_kmk2c"]
[ext_resource type="Texture2D" uid="uid://c3deyj1gtnyxy" path="res://Pixel Adventure 1/Free/Main Characters/Desappearing (96x96).png" id="2_d1mnv"]
[ext_resource type="Texture2D" uid="uid://4i3x730b8kkp" path="res://Pixel Adventure 2/Mushroom/Idle (32x32).png" id="2_di4v0"]
[ext_resource type="Texture2D" uid="uid://dc45td80ssnyn" path="res://Pixel Adventure 2/Mushroom/Run (32x32).png" id="3_ki5pt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cdbui"]
atlas = ExtResource("2_d1mnv")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y02l"]
atlas = ExtResource("2_d1mnv")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_51ewb"]
atlas = ExtResource("2_d1mnv")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxsl4"]
atlas = ExtResource("2_d1mnv")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnsuc"]
atlas = ExtResource("2_d1mnv")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0let"]
atlas = ExtResource("1_kmk2c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y30b1"]
atlas = ExtResource("1_kmk2c")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeyqg"]
atlas = ExtResource("1_kmk2c")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4efs5"]
atlas = ExtResource("1_kmk2c")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbvjm"]
atlas = ExtResource("1_kmk2c")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5aqo"]
atlas = ExtResource("2_di4v0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1cwe"]
atlas = ExtResource("2_di4v0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iatwn"]
atlas = ExtResource("2_di4v0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo4h7"]
atlas = ExtResource("2_di4v0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0bpm"]
atlas = ExtResource("2_di4v0")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb2vr"]
atlas = ExtResource("2_di4v0")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4dxv"]
atlas = ExtResource("2_di4v0")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjfd0"]
atlas = ExtResource("2_di4v0")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_my1eb"]
atlas = ExtResource("2_di4v0")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyvgc"]
atlas = ExtResource("2_di4v0")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_12uqs"]
atlas = ExtResource("2_di4v0")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82dgd"]
atlas = ExtResource("2_di4v0")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1vkf"]
atlas = ExtResource("2_di4v0")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ex72y"]
atlas = ExtResource("2_di4v0")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_msp24"]
atlas = ExtResource("3_ki5pt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_37h4p"]
atlas = ExtResource("3_ki5pt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xri2"]
atlas = ExtResource("3_ki5pt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pgk0"]
atlas = ExtResource("3_ki5pt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c07le"]
atlas = ExtResource("3_ki5pt")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jb7e"]
atlas = ExtResource("3_ki5pt")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0xkr"]
atlas = ExtResource("3_ki5pt")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3nnl"]
atlas = ExtResource("3_ki5pt")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqx47"]
atlas = ExtResource("3_ki5pt")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8px6x"]
atlas = ExtResource("3_ki5pt")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smlfd"]
atlas = ExtResource("3_ki5pt")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c80b4"]
atlas = ExtResource("3_ki5pt")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dk3l"]
atlas = ExtResource("3_ki5pt")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4spb7"]
atlas = ExtResource("3_ki5pt")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofl07"]
atlas = ExtResource("3_ki5pt")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c5ov"]
atlas = ExtResource("3_ki5pt")
region = Rect2(480, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5pkft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdbui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y02l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51ewb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxsl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnsuc")
}],
"loop": false,
"name": &"death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0let")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y30b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeyqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4efs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbvjm")
}],
"loop": false,
"name": &"hit",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5aqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1cwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iatwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo4h7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0bpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb2vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4dxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjfd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my1eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyvgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12uqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82dgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1vkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ex72y")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_msp24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37h4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xri2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pgk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c07le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jb7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0xkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3nnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqx47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8px6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smlfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c80b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dk3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4spb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofl07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c5ov")
}],
"loop": true,
"name": &"run",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7aux6"]
size = Vector2(20, 2.8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efbvh"]
size = Vector2(27.4, 10)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_msg1p"]
radius = 7.6
height = 26.4

[node name="Mushroom Enemy" type="CharacterBody2D"]
scale = Vector2(-2.5, 2.5)
collision_layer = 0
script = ExtResource("1_fswyn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_5pkft")
animation = &"idle"
autoplay = "idle"
frame = 12
frame_progress = 0.85131

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.86102e-07, 14.6)
shape = SubResource("RectangleShape2D_7aux6")

[node name="Wall Detector" type="Area2D" parent="."]
position = Vector2(14.8, 5.6)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall Detector"]
position = Vector2(-14.8, -0.599999)
shape = SubResource("RectangleShape2D_efbvh")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-10, 0)
target_position = Vector2(0, 18)

[node name="TurnaroundTimer" type="Timer" parent="."]
wait_time = 1.7
one_shot = true

[node name="AliveTimer" type="Timer" parent="."]
wait_time = 0.35

[node name="ReanimateTimer" type="Timer" parent="."]

[node name="PlayerCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2(7.10602e-15, 4.8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_msg1p")

[connection signal="body_entered" from="Wall Detector" to="." method="_on_walls_body_entered"]
[connection signal="timeout" from="TurnaroundTimer" to="." method="_on_turnaround_timer_timeout"]
[connection signal="timeout" from="AliveTimer" to="." method="_on_alive_timer_timeout"]
[connection signal="body_entered" from="PlayerCheck" to="." method="_on_player_check_body_entered"]
